  - [Jul 9, 99] Added link (upper arrow) to welcome page in displayings by
    first names and surnames.
  - [Jul 9, 99] Fixed date check for possible father when interval (i.e. was
    telling "incorrect" when father died between 1250 and 1260 and son born
    in 1255).
  - [Jul 3, 99] Added "af" as possible surnames particles (this is Danish)
    possibly ignored in "search".

* Gedcom to GeneWeb (ged2gwb)
  - [Jul 5, 99] Fixed bug sometimes stopping the program (exception
    "Invalid_argument") after the detection of an error of a family whose
    parents are of bad sex (female father and male mother).
  - [Jul 2, 99] Recognizes the dates of the form "FROM..TO..".

* GeneWeb to Gedcom (gwb2ged)
  - [Jul 15, 99] Added option "-charset" whose values can be "ANSEL" or
    "ASCII": "ASCII" is the default. Deleted option "-ascii" now unuseful.
  - [Jul 2, 99] Generate now dates of the form "FROM..TO.." for titles.

* Base configuration files (base.gwf)
  - [Jul 18, 99] Added the key 'enclosing_tag' to enclose whole displayed
    text with one or several HTML tags. E.g. by setting it to 'strong', all
    text is displayed bold. Added comment about that in the template file
    "a.gwf".

* Lexicon (lang/lexicon.txt) and Welcome pages (lang/*/start.txt)
  - [Jul 17, 99] In welcome pages, simplified the text "it is a first
    name and surname or public name blah blah blah...".
  - [Jul 17, 99] Changed French term for "surname" ("nom" changed into
    "patronyme" more common among French genealogists).
  - [Jul 8, 99] Updated Swedish phrases (Stig Petersson)
  - [Jul 3, 99] Updated Danish phrases (Hans Albeck)

GeneWeb version 2.04
--------------------

* Setup program
  - [Jun 28, 99] Fixed bug: did not work for directories holding spaces.
  - [Jun 19, 99] Changed GEDCOM import menu to reflect new option "-charset"
    of "ged2gwb" (see below in section "Gedcom to GeneWeb").
  - [Jun 18, 99] Added a color combination in the provided palette